Style.css
* {
  margin: 0%;
}


body {
  background-color:#dcdcdc;
  padding: 2%;
}

.main-container {
  display: flex;
  height: 30rem;
  background-color: white;
  width: 90%;
  margin: auto;
  height: 67.500em;
  /* -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
  -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
       box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset; */

       box-shadow: 0px 0px 6px 2px grey;
       border-radius: 1.563em;  
}

.RandomBeerButton {
  display: flex;
  justify-content: center;
  align-content: center;
  width: 40%;
  
}
  

h1 {
    justify-content: center;
    display: flex;

}

  .input-box {
    /* background-color: white; */
    height: 20%;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    align-items: center;

  }

  form {
    justify-content: center;
    display: flex;
    margin-top: 9rem;
    height: 2rem;
  }
  
  .grid-item {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    text-align: center;
    background-color: lightslategrey;
    align-content: center;
    width: 0%;
    border-radius: 1.563em 0 0 1.563em;
  }

  .ButtonRandomNumber {
    display: flex;
    justify-content: center;
    align-content: center;
    /* height: 5%; */
  }
  
  .grid-item-2 {
    flex-grow: 2;
    background-color: black;
    width: 10%;
    height: 60%;
    border-radius: 0 1.563em 0 0;
  }


  .BeerInfoGridBox {
    display: grid;
    height: 500px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 10rem 10rem 10rem;
                        
  }

  .BeerInfoContainer {
    display: flex;
    /* justify-content: center;
    align-content: center; */
    /* width: 50%;
    height: 50%; */
    /* border: 2px solid black; */
  }

  .RemoveChild {
    display: flex;
    justify-content: center;
    align-content: center;
  }
  
  .item-box {
    display: grid;
    justify-content: center;
    align-content: center;
  }

  .cardcreateinfo {
    border: 2px solid black;
    padding: 1%;
/*     max-height: 100%;
    margin-left:   5px;
    margin-right:  5px;
    margin-top:    10px;
    margin-bottom: 10px; */

    border-radius: 1.563em;    
    background: #f8f6f3;
    text-decoration: underline;

    display: flex;
    align-items: center;
    flex-direction: column;

    width: 33%;
    height: 33%;
    min-height: 10em;
    min-width: 10em;
    max-height: 14em;
    max-width: 14.5em;
  }

  .cardcreateinfoimg {
    width: 40%;
    height: 40%;

    max-height: 12.25em;
    max-width: 12.75em;
  }

